@@ -3,11 +3,10 @@ package fr.cotedazur.univ.polytech.startingpoint.joueurs;
 import fr.cotedazur.univ.polytech.startingpoint.GameState;
 import fr.cotedazur.univ.polytech.startingpoint.actions.*;
 import fr.cotedazur.univ.polytech.startingpoint.objectifs.Objectif;
-import fr.cotedazur.univ.polytech.startingpoint.objectifs.ObjectifJardinier;
+import fr.cotedazur.univ.polytech.startingpoint.objectifs.jardinier.ObjectifJardinier;
 import fr.cotedazur.univ.polytech.startingpoint.objectifs.TypeObjectif;
-import fr.cotedazur.univ.polytech.startingpoint.plateau.Parcelle;
-import fr.cotedazur.univ.polytech.startingpoint.plateau.pioche.PiocheParcelle;
-import fr.cotedazur.univ.polytech.startingpoint.plateau.Plateau;
+import fr.cotedazur.univ.polytech.startingpoint.elements.reserve.Parcelle;
+import fr.cotedazur.univ.polytech.startingpoint.elements.plateau.Plateau;
 import fr.cotedazur.univ.polytech.startingpoint.utilitaires.Couleur;
 import fr.cotedazur.univ.polytech.startingpoint.utilitaires.Position;
 import fr.cotedazur.univ.polytech.startingpoint.utilitaires.PositionsRelatives;
@@ -19,7 +18,7 @@ import java.util.Random;
 import java.util.Set;
 
 public class BotJardinier extends Bot {
-    private final Random random; // pour les choix de meteo
+    private final Random random;
 
     public BotJardinier(String nom) {
         super(nom);
@@ -28,69 +27,92 @@ public class BotJardinier extends Bot {
 
     @Override
     protected Action choisirUneAction(GameState gameState, Set<TypeAction> typesInterdits) {
+        // Chaque méthode ci-dessous gère une stratégie spécifique et retourne null si l'action n'est pas possible/souhaitée
 
-        // 0. URGENCE : Si je n'ai AUCUN objectif
-        if (getInventaire().getObjectifs().isEmpty() && !typesInterdits.contains(TypeAction.PIOCHER_OBJECTIF)) {
-            // CORRECTION 1 : On vérifie si la pioche est vide avant de demander !
-            if (gameState.getPiocheJardinier().getTaille() > 0) {
-                return new PiocherObjectif(TypeObjectif.JARDINIER);
-            } else if (gameState.getPiochePanda().getTaille() > 0) {
-                // Fallback : Si plus de cartes Jardinier, je prends Panda
-                return new PiocherObjectif(TypeObjectif.PANDA);
-            }
-            // Si tout est vide, on continue vers d'autres actions (ne pas retourner null
-            // ici)
+        Action actionUrgente = gererUrgenceObjectif(gameState, typesInterdits);
+        if (actionUrgente != null) return actionUrgente;
+
+        Action actionIrrigation = gererPoseIrrigation(gameState, typesInterdits);
+        if (actionIrrigation != null) return actionIrrigation;
+
+        Action actionJardinage = gererAvancementObjectif(gameState, typesInterdits);
+        if (actionJardinage != null) return actionJardinage;
+
+        Action actionExtension = gererExtensionPlateau(gameState, typesInterdits);
+        if (actionExtension != null) return actionExtension;
+
+        Action actionStockage = gererStockageIrrigation(typesInterdits);
+        if (actionStockage != null) return actionStockage;
+
+        Action actionRecharge = gererRechargeObjectifs(gameState, typesInterdits);
+        if (actionRecharge != null) return actionRecharge;
+
+        return gererActionParDefaut(gameState, typesInterdits);
+    }
+
+    // --- SOUS-METHODES DE DECISION (Complexité divisée) ---
+
+    private Action gererUrgenceObjectif(GameState gameState, Set<TypeAction> typesInterdits) {
+        if (!getInventaire().getObjectifs().isEmpty() || typesInterdits.contains(TypeAction.PIOCHER_OBJECTIF)) {
+            return null;
         }
+        if (gameState.getPiocheJardinier().getTaille() > 0) {
+            return new PiocherObjectif(TypeObjectif.JARDINIER);
+        } else if (gameState.getPiochePanda().getTaille() > 0) {
+            return new PiocherObjectif(TypeObjectif.PANDA);
+        }
+        return null;
+    }
 
-        ObjectifJardinier obj = getMeilleurObjectifJardinier();
-
-        // 1. GESTION DE L'IRRIGATION
+    private Action gererPoseIrrigation(GameState gameState, Set<TypeAction> typesInterdits) {
         if (getInventaire().getNombreCanauxDisponibles() > 0 && !typesInterdits.contains(TypeAction.POSER_IRRIGATION)) {
-            Action poserCanal = tenterPoserIrrigation(gameState);
-            if (poserCanal != null)
-                return poserCanal;
+            return tenterPoserIrrigation(gameState);
         }
+        return null;
+    }
 
-        // 2. AVANCER L'OBJECTIF JARDINIER
-        if (obj != null) {
-            if (!typesInterdits.contains(TypeAction.DEPLACER_JARDINIER)) {
-                Action actionJardinier = tenterFairePousser(gameState, obj.getCouleurs().getFirst());
-                if (actionJardinier != null)
-                    return actionJardinier;
-            }
+    private Action gererAvancementObjectif(GameState gameState, Set<TypeAction> typesInterdits) {
+        ObjectifJardinier obj = getMeilleurObjectifJardinier();
+        if (obj != null && !typesInterdits.contains(TypeAction.DEPLACER_JARDINIER)) {
+            return tenterFairePousser(gameState, obj.getCouleurs().getFirst());
         }
+        return null;
+    }
 
-        // 3. AGRANDIR LE PLATEAU
+    private Action gererExtensionPlateau(GameState gameState, Set<TypeAction> typesInterdits) {
         if (!typesInterdits.contains(TypeAction.POSER_PARCELLE) && !gameState.getPiocheParcelle().estVide()) {
-            Parcelle p = gameState.getPiocheParcelle().piocher();
-            if (p != null) {
-                PoserParcelle action = new PoserParcelle();
-                return new PoserParcelle();
-            }
+            return new PoserParcelle();
         }
+        return null;
+    }
 
-        // 4. PRENDRE IRRIGATION (Stockage limité)
+    private Action gererStockageIrrigation(Set<TypeAction> typesInterdits) {
         if (!typesInterdits.contains(TypeAction.PRENDRE_IRRIGATION)
                 && getInventaire().getNombreCanauxDisponibles() == 0) {
             return new ObtenirCanalDirrigation();
         }
+        return null;
+    }
 
-        // 5. RECHARGER LA MAIN D'OBJECTIFS (Si pas vide)
-        if (!typesInterdits.contains(TypeAction.PIOCHER_OBJECTIF)) {
-            if (gameState.getPiocheJardinier().getTaille() > 0)
-                return new PiocherObjectif(TypeObjectif.JARDINIER);
+    private Action gererRechargeObjectifs(GameState gameState, Set<TypeAction> typesInterdits) {
+        if (!typesInterdits.contains(TypeAction.PIOCHER_OBJECTIF) && gameState.getPiocheJardinier().getTaille() > 0) {
+            return new PiocherObjectif(TypeObjectif.JARDINIER);
         }
+        return null;
+    }
 
-        // 6. ACTION PAR DÉFAUT (Déplacer panda)
+    private Action gererActionParDefaut(GameState gameState, Set<TypeAction> typesInterdits) {
         if (!typesInterdits.contains(TypeAction.DEPLACER_PANDA)) {
             List<Position> depts = gameState.getPlateau()
                     .getTrajetsLigneDroite(gameState.getPanda().getPositionPanda());
-            if (!depts.isEmpty())
-                return new DeplacerPanda(gameState.getPanda(), depts.get(0));
+            if (!depts.isEmpty()) {
+                return new DeplacerPanda(gameState.getPanda(), depts.getFirst());
+            }
         }
-
         return null;
     }
+
+    // --- UTILITAIRES LOGIQUES ---
 
     private ObjectifJardinier getMeilleurObjectifJardinier() {
         for (Objectif o : getInventaire().getObjectifs()) {
@@ -116,6 +138,24 @@ public class BotJardinier extends Bot {
         return null;
     }
 
+    private Action tenterPoserIrrigation(GameState gs) {
+        Plateau plateau = gs.getPlateau();
+        Set<Position> positionsOccupees = plateau.getParcellesMap().keySet();
+
+        for (Position pos : positionsOccupees) {
+            for (PositionsRelatives dir : PositionsRelatives.values()) {
+                if (dir == PositionsRelatives.ZERO) continue;
+
+                Position voisin = pos.add(dir.getPosition());
+
+                if (plateau.peutPlacerCanal(pos, voisin) && !plateau.aCanalEntre(pos, voisin)) {
+                    return new PoserCanalDirrigation(pos, voisin);
+                }
+            }
+        }
+        return null;
+    }
+
     @Override
     public Position choisirPosition(Parcelle parcelleChoisie, Plateau plateau) {
         List<Position> positionsDisponibles = plateau.getEmplacementsDisponibles();
@@ -125,58 +165,30 @@ public class BotJardinier extends Bot {
         return null;
     }
 
-    private Action tenterPoserIrrigation(GameState gs) {
-        Plateau plateau = gs.getPlateau();
-        Set<Position> positionsOccupees = plateau.getParcellesMap().keySet();
+    // =================== METEO ===================
 
-        for (Position pos : positionsOccupees) {
-            for (PositionsRelatives dir : PositionsRelatives.values()) {
-                if (dir == PositionsRelatives.ZERO)
-                    continue;
-
-                Position voisin = pos.add(dir.getPosition());
-
-                // CORRECTION 2 : On utilise aCanalEntre() pour ne pas proposer un canal déjà
-                // posé !
-                if (plateau.peutPlacerCanal(pos, voisin) && !plateau.aCanalEntre(pos, voisin)) {
-                    return new PoserCanalDirrigation(pos, voisin);
-                }
-            }
-        }
-        return null;
-    }
-
-    /// =================== METEO ===================
-    ///
-
-    // Implémentation pour la pluie
     @Override
     public Parcelle choisirParcelleMeteo(List<Parcelle> parcellesIrriguees) {
         if (parcellesIrriguees.isEmpty()) {
             return null;
         }
-        // Choisit une parcelle aléatoire parmi les parcelles irriguées
         return parcellesIrriguees.get(random.nextInt(parcellesIrriguees.size()));
     }
 
-    // Implémentation pour l'orage
     @Override
     public Parcelle choisirDestinationPanda(List<Parcelle> parcelles) {
         if (parcelles.isEmpty()) {
             return null;
         }
-        // Choisit une parcelle aléatoire pour placer le panda
         return parcelles.get(random.nextInt(parcelles.size()));
     }
 
-    // Implémentation pour le choix libre
     @Override
     public Meteo choisirMeteo() {
         Meteo[] options = { Meteo.SOLEIL, Meteo.PLUIE, Meteo.VENT, Meteo.ORAGE, Meteo.NUAGES };
         return options[random.nextInt(options.length)];
     }
 
-    // Implémentation pour les nuages sans aménagement
     @Override
     public Meteo choisirMeteoAlternative() {
         Meteo[] options = { Meteo.SOLEIL, Meteo.PLUIE, Meteo.VENT, Meteo.ORAGE };
